Fixed centered load btn on safari

--- a/src/sass/Offers.scss
+++ b/src/sass/Offers.scss
@@ -26,6 +26,7 @@ $card-head-dark: rgba(0, 0, 0, 0.65);
   font-weight: 800;
   font-size: 18px;
   justify-content: center;
+  display: block;
 }
 
 .card {
